--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,7 +13,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    timeout-minutes: 5
 
     steps:
     - uses: actions/checkout@v2
@@ -22,8 +21,4 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn test --batch-mode -Dmaven.test.failure.ignore=true
-    - name: Publish Test Report
-      uses: scacap/action-surefire-report@v1
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+      run: mvn -B package --file pom.xml
